complete mobile vers

--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -1,5 +1,4 @@
 .actions {
-
   &__item {
     margin-bottom: 60px;
 
@@ -33,7 +32,6 @@
 
   &__name {
     color: #687480;
-    font-family: IBM Plex Sans;
     font-size: 16px;
     font-weight: 500;
     line-height: 100%;
@@ -42,7 +40,6 @@
   &__date {
     justify-self: end;
     color: $color-secondary;
-    font-family: IBM Plex Sans;
     font-size: 16px;
     font-weight: 700;
     line-height: 150%;
@@ -52,7 +49,7 @@
     margin-bottom: 10px;
 
     color: $color-title;
-    font-family: Montserrat;
+    font-family: "Montserrat", sans-serif;
     font-size: 28px;
     font-weight: 400;
     line-height: 100%;
@@ -61,7 +58,7 @@
 
     &::after {
       $red-square-size: 10px;
-      content: '';
+      content: "";
       width: 10px;
       height: 10px;
       background-color: red;
@@ -82,8 +79,7 @@
   }
 
   &__text {
-    color: #4E4E4E;
-    font-family: IBM Plex Sans;
+    color: #4e4e4e;
     font-size: 16px;
     font-weight: 300;
     line-height: 150%;
