--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -9,9 +9,11 @@
   &__name {
     color: $color-title;
     text-align: center;
-    font-family: Montserrat;
+    font-family: "Montserrat", sans-serif;
     font-size: 30px;
     font-weight: 700;
     line-height: 100%;
+
+    @include hover (color, $color-hover);
   }
 }
