--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,6 +1,5 @@
 .slider {
   overflow: hidden;
-  width: 100%;
   width: 280px;
 
   &__images {
@@ -38,7 +37,7 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: #E0E0E0;
+    background-color: #e0e0e0;
     transition: all $transition-duration;
 
     &--active {
