--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,10 +3,14 @@
 @import "./blocks/actions";
 @import "./blocks/btn";
 @import "./blocks/container";
+@import "./blocks/footer";
 @import "./blocks/form";
 @import "./blocks/gallery";
 @import "./blocks/header";
 @import "./blocks/logo";
+@import "./blocks/main";
+@import "./blocks/menu-header";
+@import "./blocks/menu";
 @import "./blocks/normalize";
 @import "./blocks/page";
 @import "./blocks/schedule";
