--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,4 +1,5 @@
 $transition-duration: 0.5s;
 
-$color-title: #0F0E08;
-$color-secondary : #1A5A4C;
+$color-title: #0f0e08;
+$color-secondary : #1a5a4c;
+$color-hover: #f14a27;
