--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -15,7 +15,7 @@
 
     @include placeholder {
       color: #687480;
-      font-family: Montserrat;
+      font-family: "Montserrat", sans-serif;
       font-size: 14px;
       font-weight: 400;
       line-height: 100%;
@@ -26,8 +26,8 @@
 
     &:focus {
       @include placeholder {
-         transform: translateX(100px);
-         opacity: 0;
+        transform: translateX(100px);
+        opacity: 0;
       }
     }
   }
