--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,14 +1,24 @@
 .header {
   min-height: 100vh;
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
 
   @include grid;
   grid-template-rows: repeat(2, min-content);
   row-gap: 20px;
 
+  &__menu-header {
+    position: absolute;
+    top: 0;
+    left: -100%;
+  }
+
+  &__top-bar {
+    position: relative;
+  }
+
   &__top {
     height: 300px;
-    @include background('../images/header-bg.png');
+    @include background("../images/header-bg.png");
     grid-column: span 2;
   }
 
@@ -22,6 +32,7 @@
   &__title {
     margin-bottom: 40px;
     grid-column: span 2;
+    text-align: center;
   }
 
   &__tickets {
