--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,7 +1,27 @@
 .page {
-  font-family: IBM Plex Sans, Montserrat, sans-serif;
+  font-family: "IBM Plex Sans", "Montserrat", sans-serif;
+  scroll-behavior: smooth;
+
+  @include scrollBar;
 
   &__content {
     margin: 0 auto;
   }
+
+  &:has(.menu-header:target) {
+    overflow: hidden;
+
+    .header__menu-header {
+      left: 0;
+    }
+  }
+
+  &__footer {
+    margin-bottom: 120px;
+  }
+
+  &__header {
+    position: relative;
+  }
+
 }
