--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -23,11 +23,11 @@
     @content;
   }
 
-  &:-moz-placeholder {
+  &::-moz-placeholder {
     @content;
   }
 
-  &::-moz-placeholder {
+  &:-moz-placeholder {
     @content;
   }
 
@@ -42,6 +42,22 @@
   &:-webkit-autofill:focus {
     -webkit-text-fill-color: #f14a27;
     transition: all ease-in $transition-duration;
-    -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+    -webkit-box-shadow: 0 0 0 1000px #fff inset;
+  }
+}
+
+@mixin scrollBar {
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $color-secondary;
+    outline: 1px solid $color-secondary;
+    border-radius: 5px;
   }
 }
