create landing page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./header.scss";
+@import "./icons.scss";
+@import "./menu.scss";
+@import "./events.scss";
+@import "./event.scss";
+@import "./lections.scss";
+@import "./gallery.scss";
+@import "./subscribe.scss";
+@import "./footer.scss";
 
 body {
-  background: $c-gray;
+  background: $background-c-white;
+  scroll-behavior: smooth;
+  font-family: 'IBM Plex Sans', sans-serif;
+  margin: 0;
 }
