--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$background-c-white: #fff;
+$background-c-green: #1a5a4c;
+$c-black: #000;
+$c-grey: #687480;
+$c-for-text: #0f0e08;
+$c-orange: #f14a27;
