updated the mobile version

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -7,16 +7,16 @@
 
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   text-align: center;
   box-sizing: border-box;
-  padding: 0 20px;
+  padding: 9px 20px 70px 20px;
+  height: 100vh;
 
   &__nav {
     display: flex;
     align-items: center;
-    padding-top: 9px;
-    padding-bottom: 250px;
-    box-sizing: border-box;
+    // box-sizing: border-box;
   }
 
   &__title {
