--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -1,14 +1,26 @@
 .icon {
   height: 24px;
   width: 24px;
+  background-repeat: no-repeat;
+  background-size: contain;
 
   &--menu {
+    background-image: url(../images/icons/menu.svg);
     margin-right: 88px;
+
+    &:hover {
+    background-image: url(../images/icons/menu-hover.svg);
+    }
   }
 
   &--logo {
+    background-image: url(../images/logo-NA-MU.svg);
     width: 55px;
     height: 61px;
+  }
+
+  &--close {
+    background-image: url(../images/icons/close.svg);
   }
 
   &__footer--logo {
