--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "typography";
 @import "./header.scss";
 @import "./icons.scss";
+@import "./navigation.scss";
 @import "./menu.scss";
 @import "./events.scss";
 @import "./event.scss";
