--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -2,7 +2,8 @@
   background-color: $background-c-green;
   color: $background-c-white;
   box-sizing: border-box;
-  // height: 100vh;
+  height: 100vh;
+  padding: 0 20px;
 
   position: fixed;
   top: 0;
@@ -18,5 +19,43 @@
     opacity: 1;
     transform: translateX(0);
     pointer-events: all;
+  }
+
+  &__navigation {
+    display: flex;
+    flex-direction: row;
+    gap: 28px;
+    padding: 27px 0;
+
+    border-bottom: 1px solid $background-c-white;
+  }
+
+  &__conteiner {
+    padding: 0;
+  }
+
+  &__link {
+    color: $background-c-white;
+  }
+
+  &__schedule {
+    margin-top: 24px;
+  }
+
+  &__title {
+    text-decoration: none;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    margin-bottom: 20px;
+  }
+
+  &__description {
+    text-decoration: none;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
   }
 }
