add scroll-top button

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import "./icons.scss";
 @import "./navigation.scss";
 @import "./menu.scss";
+@import "./scroll-top.scss";
 @import "./events.scss";
 @import "./event.scss";
 @import "./lections.scss";
@@ -15,6 +16,6 @@
 body {
   background: $background-c-white;
   scroll-behavior: smooth;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: 'IBM Ple x Sans', sans-serif;
   margin: 0;
 }
