--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -2,7 +2,6 @@
   background-color: $background-c-green;
   color: $background-c-white;
   box-sizing: border-box;
-  height: 100vh;
   padding: 0 20px;
 
   position: fixed;
@@ -57,5 +56,6 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
+    margin-bottom: 27px;
   }
 }
