create a full desktop part

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -12,7 +12,13 @@
     position: absolute;
     background-image: url(../images/icons/icon-close.png);
     background-size: cover;
-    top: 40px;
-    left: 56px;
+  }
+
+  &--facebook {
+    background: url(../images/icons/icon-facebook.png);
+  }
+
+  &--instagram {
+    background: url(../images/icons/icon-instagram.png);
   }
 }
