--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -6,8 +6,12 @@
 
   &:has(.page__menu:target) {
     overflow: hidden;
-    opacity: 0.5;
-    background: #18181A;
+  }
+
+  &__body {
+    margin: 0;
+    background: $bg-color;
+    min-width: 320px;
   }
 
   &__menu {
@@ -15,6 +19,8 @@
     top: 0;
     right: 0;
     left: 0;
+    height: 100vh;
+    background: rgba(24, 24, 26, 0.5);
 
     transition: all $effectDuration;
     opacity: 0;
@@ -26,11 +32,11 @@
       transform: translateX(0);
       pointer-events: all;
     }
-  }
 
-  &__body {
-    margin: 0;
-    background: $bg-color;
-    min-width: 320px;
+    &-wrapp {
+      height: fit-content;
+      background-color: $main-green;
+      width: 100%;
+    }
   }
 }
