--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,10 @@
 @import "./blocks/icon.scss";
 @import "./blocks/button.scss";
 @import "./blocks/menu.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/museum-info.scss";
 @import "./blocks/section-title.scss";
 @import "./blocks/events.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/follow.scss";
+@import "./blocks/footer.scss";
