--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -5,7 +5,7 @@ $title-color: #0f0e08;
 $secodary-text-color: #4e4e4e;
 $event-link-color: #687480;
 $white-text-color: #fff;
-$follow-button-color: #F14A27;
+$follow-button-color: #f14a27;
 
 $title-font: "Montserrat", "Roboto", sans-serif;
 $secondary-font: "IBM Plex Sans", "Roboto", sans-serif;
