--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -6,7 +6,7 @@
   &__content {
     width: 100%;
     position: relative;
-    height: 600px;
+    height: 70vh;
 
     @include pageGrid;
   }
@@ -38,7 +38,7 @@
 
     grid-column: span 7;
     margin-top: -$container-padding-top;
-    margin-right: calc(-50vw + 88%);
+    margin-right: calc(-50vw + 87%);
   }
 
   &__logo {
