--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,21 +1,21 @@
 .menu {
-  background-color: $main-green;
   width: 100%;
-  padding-bottom: 48px;
 
   &__content {
+    position: relative;
     display: flex;
     flex-direction: row;
+    padding-bottom: 48px;
+    height: fit-content;
   }
 
-  &__bloc {
+  &__block {
     display: flex;
     width: 50%;
     justify-content: center;
 
-    &--schedule {
+    &--museum-info {
       position: relative;
-
 
       &::before {
         content: "";
@@ -26,58 +26,5 @@
         position: absolute;
       }
     }
-  }
-
-  &__nav {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 370px;
-    gap: 30px;
-    height: fit-content;
-
-    &-link {
-      margin: 0;
-      text-decoration: none;
-      color: $white-text-color;
-      font-family: $secondary-font;
-      font-size: 22px;
-      font-weight: 500;
-      line-height: 100%;
-      width: 170px;
-    }
-  }
-
-  &__schedule {
-    display: flex;
-    flex-direction: column;
-    max-width: 370px;
-    gap: 20px;
-
-    &-title {
-      margin: 0;
-      color: $white-text-color;
-      font-family: $secondary-font;
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 140.625%;
-    }
-
-    &-work {
-      display: flex;
-
-      &-column {
-        margin: 0;
-        color: $white-text-color;
-        font-family: $secondary-font;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 150%;
-        width: 170px;
-      }
-    }
-  }
-
-  &__text-bold {
-    font-weight: 600;
   }
 }
