complete tablet vers 70%

--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -2,14 +2,26 @@
   &__item {
     margin-bottom: 60px;
 
+    @include onTablet {
+      margin-bottom: 64px;
+    }
+
     &:last-child {
       margin-bottom: 46px;
+
+      @include onTablet {
+        margin-bottom: 0;
+      }
     }
   }
 
   &__img {
     width: 100%;
     margin-bottom: 20px;
+
+    @include onTablet {
+      margin-bottom: 44px;
+    }
 
     &--3 {
       height: 210px;
@@ -24,9 +36,18 @@
     align-items: center;
     margin-bottom: 15px;
 
+    @include onTablet {
+      grid-template-columns: repeat(2, max-content);
+      margin-bottom: 32px;
+    }
+
     &--3 {
       padding: 24px 21px;
       grid-template-columns: repeat(2, auto);
+
+      @include onTablet {
+        padding: 0;
+      }
     }
   }
 
@@ -35,6 +56,10 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 100%;
+
+    @include onTablet {
+      font-size: 14px;
+    }
   }
 
   &__date {
@@ -43,6 +68,11 @@
     font-size: 16px;
     font-weight: 700;
     line-height: 150%;
+
+    @include onTablet {
+      font-size: 14px;
+      line-height: 100%;
+    }
   }
 
   &__title {
@@ -56,6 +86,11 @@
     position: relative;
     width: fit-content;
 
+    @include onTablet {
+      font-size: 36px;
+      margin-bottom: 15px;
+    }
+
     &::after {
       $red-square-size: 10px;
       content: "";
@@ -66,11 +101,20 @@
       position: absolute;
       top: 11px;
       right: -20px;
+
+      @include onTablet {
+        top: 17px;
+      }
     }
 
     &--3 {
       text-align: center;
-      margin-bottom: 0;
+      padding-bottom: 20px;
+      margin: 0 auto;
+
+      @include onTablet {
+        text-align: left;
+      }
 
       &::after {
         display: none;
@@ -83,11 +127,23 @@
     font-size: 16px;
     font-weight: 300;
     line-height: 150%;
+
+    @include onTablet {
+      width: 460px;
+    }
   }
 
   &__bottom {
     position: relative;
     bottom: 74px;
     background-color: #fff;
+    margin: 0 auto;
+
+    border-bottom: 2px solid rgba(26, 90, 76, 0.25);
+
+    @include onTablet {
+      padding: 45px 55px 50px;
+      width: 570px;
+    }
   }
 }
