--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,6 +1,11 @@
 .gallery {
   &__title {
     margin-bottom: 40px;
+
+    @include onTablet {
+      margin-bottom: 48px;
+      text-align: left;
+    }
   }
 
   &__slider {
