--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -6,6 +6,10 @@
   display: block;
   text-decoration: none;
 
+  @include onTablet {
+    grid-column: 2/3;
+  }
+
   &__name {
     color: $color-title;
     text-align: center;
