--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -2,4 +2,12 @@
   &__schedule {
     margin-bottom: 40px;
   }
+
+  &__title {
+    margin-bottom: 38px;
+
+    @include onTablet {
+      margin-bottom: 48px;
+    }
+  }
 }
