--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -1,8 +1,11 @@
 .tickets {
   grid-column: span 2;
-
   display: grid;
   grid-template-columns: 1fr 50px;
+
+  @include onTablet {
+    width: 270px;
+  }
 
   &__main {
     color: $color-title;
