--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -4,4 +4,9 @@
   font-size: 36px;
   font-weight: 700;
   line-height: 100%;
+
+  @include onTablet {
+    font-size: 48px;
+    text-align: left;
+  }
 }
