complete tablet vers

--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -27,6 +27,10 @@
       height: 210px;
       object-position: center;
       margin-bottom: 0;
+
+      @include onTablet {
+        height: 390px;
+      }
     }
   }
 
@@ -39,6 +43,7 @@
     @include onTablet {
       grid-template-columns: repeat(2, max-content);
       margin-bottom: 32px;
+      column-gap: 20px;
     }
 
     &--3 {
@@ -103,7 +108,10 @@
       right: -20px;
 
       @include onTablet {
-        top: 17px;
+        top: 14px;
+        width: 15px;
+        height: 15px;
+        right: -30px;
       }
     }
 
