--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -13,6 +13,10 @@
     transition: all ease-in $transition-duration;
     flex-grow: 1;
 
+    @include onTablet {
+      height: 70px;
+    }
+
     @include placeholder {
       color: #687480;
       font-family: "Montserrat", sans-serif;
