--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -11,12 +11,22 @@
     &--header {
       transform: translateX(52px);
       margin-bottom: 0;
+
+      @include onTablet {
+        transform: translateX(0);
+      }
     }
   }
 
   &__box {
     display: grid;
     row-gap: 20px;
+
+    @include onTablet {
+      &:first-child {
+        grid-column: 2/4;
+      }
+    }
   }
 
   &__item {
