--- a/src/styles/blocks/social-icons.scss
+++ b/src/styles/blocks/social-icons.scss
@@ -2,10 +2,20 @@
   display: flex;
   align-items: center;
 
+  @include onTablet {
+    justify-content: space-between;
+  }
+
   &__item {
     padding: 10px;
     cursor: pointer;
 
     @include hover(transform, scale(1.2));
+
+    @include onTablet {
+      &:first-child {
+        padding-left: 0;
+      }
+    }
   }
 }
