--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -16,6 +16,11 @@
     top: $top-bar-height / 2 -  $menu-icon-heigth / 2;
     left: 20px;
 
+    @include onTablet {
+      top: 39px;
+      left: 35px;
+    }
+
     &:hover {
       background-image: url(../images/icons/icon-burger-menu-hover.svg);
     }
