--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -7,4 +7,11 @@
   font-size: 12px;
   font-weight: 300;
   line-height: 140%;
+
+  &__content {
+    @include onTablet {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
 }
