--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -2,9 +2,26 @@
   padding: 88px 0;
   background-image: url(../images/subscibe/subscribe-bg.png);
 
+  @include onTablet {
+    padding: 82px 0;
+    margin-bottom: 50px;
+  }
+
+  &__content {
+    @include onTablet {
+      @include grid;
+      width: 100%;
+    }
+  }
+
   &__title {
     margin-bottom: 20px;
     color: #fff;
+
+    @include onTablet {
+      margin-bottom: 16px;
+      grid-column: 3/-3;
+    }
   }
 
   &__subtitle {
@@ -15,5 +32,14 @@
     line-height: 150%;
 
     margin-bottom: 50px;
+
+    @include onTablet {
+      margin-bottom: 64px;
+      grid-column: 2/-2;
+    }
+  }
+
+  &__form {
+    grid-column: 2/-2;
   }
 }
