--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -18,6 +18,11 @@
     line-height: 50px;
     text-align: center;
     border: 1px solid $color-secondary;
+
+    @include onTablet {
+      height: 70px;
+      line-height: 70px;
+    }
   }
 
   &__arrow {
