--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -6,12 +6,26 @@
       margin-bottom: 64px;
     }
 
+    @include onTablet {
+      margin-bottom: 104px;
+    }
+
     &:last-child {
       margin-bottom: 46px;
 
       @include onTablet {
         margin-bottom: 0;
       }
+
+      @include onDesktop {
+        margin-bottom: 126px;
+      }
+    }
+  }
+
+  &__content {
+    @include onDesktop {
+      @include grid;
     }
   }
 
@@ -23,6 +37,11 @@
       margin-bottom: 44px;
     }
 
+    @include onDesktop {
+      grid-column: 1/8;
+      margin-bottom: 0;
+    }
+
     &--3 {
       height: 210px;
       object-position: center;
@@ -31,6 +50,19 @@
       @include onTablet {
         height: 390px;
       }
+
+      @include onTablet {
+        height: 550px;
+      }
+    }
+  }
+
+  &__description {
+    @include onDesktop {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      grid-column: -1/-5;
     }
   }
 
@@ -138,6 +170,10 @@
 
     @include onTablet {
       width: 460px;
+    }
+
+    @include onDesktop {
+      width: fit-content;
     }
   }
 
