--- a/src/styles/blocks/btn.scss
+++ b/src/styles/blocks/btn.scss
@@ -1,7 +1,7 @@
 .btn {
   border: none;
   cursor: pointer;
-  width: 50px;
+  width: 100%;
 
   &__tickets {
     background-color: $color-secondary;
@@ -9,6 +9,10 @@
 
   &__form {
     background-color: #f14a27;
-  }
+    width: 50px;
 
+    @include onTablet {
+      width: 70px;
+    }
+  }
 }
