--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,8 +1,17 @@
 .container {
   padding-inline: 20px;
   grid-column: span 2;
+  max-width: 1280px;
+  margin: 0 auto;
 
   @include onTablet {
     padding-inline: 35px;
+  }
+
+  @include onDesktop {
+    padding-inline: 55px;
+    &--title {
+      padding-right: 0;
+    }
   }
 }
