--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -6,9 +6,43 @@
       margin-bottom: 48px;
       text-align: left;
     }
+
+    @include onDesktop {
+      margin-bottom: 56px;
+    }
   }
 
   &__slider {
     margin: 0 auto 100px;
+  }
+
+  &__content {
+    display: none;
+
+    @include onDesktop {
+      // display: none;
+
+      @include grid;
+      row-gap: 30px;
+      margin-bottom: 200px;
+    }
+  }
+
+  &__img-dt {
+    &--1 {
+      grid-column: 1/4;
+    }
+
+    &--2 {
+      grid-column: -1/-9;
+    }
+    &--3 {
+      grid-column: 1/9;
+      grid-row: 2;
+    }
+    &--4 {
+      grid-column: -1/-5;
+      grid-row: 2;
+    }
   }
 }
