--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -17,9 +17,14 @@
     margin-bottom: 20px;
 
     @include onTablet {
-      height: 348px;
+      height: 384px;
       grid-column: 4/-1;
       margin-bottom: 0;
+    }
+
+    @include onDesktop {
+      height: 655px;
+      grid-column: 6/-1;
     }
   }
 
@@ -32,6 +37,43 @@
       grid-row: 1;
       align-self: end;
       margin-bottom: 20px;
+    }
+
+    @include onDesktop {
+      align-self: flex-end;
+      grid-column: 1/6;
+      margin-bottom: 115px;
+
+      &-wr {
+        display: grid;
+      }
+    }
+  }
+
+  &__decor {
+    display: none;
+
+    @include onDesktop {
+      display: block;
+    }
+
+    color: #687480;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 100%;
+    padding-left: 55px;
+    transform: rotate(-90deg) translateX(100px);
+    text-transform: uppercase;
+
+    &::before {
+      content: "";
+      display: block;
+      height: 1px;
+      width: 70px;
+      background-color: #687480;
+      position: relative;
+      top: 8px;
+      left: -90px;
     }
   }
 
@@ -50,6 +92,11 @@
       line-height: 120%;
       text-align: left;
       margin-bottom: 38px;
+    }
+
+    @include onDesktop {
+      font-size: 72px;
+      margin-bottom: 90px;
     }
   }
 }
