--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -10,6 +10,10 @@
     grid-column: 2/3;
   }
 
+  @include onDesktop {
+    grid-column: span 2;
+  }
+
   &__name {
     color: $color-title;
     text-align: center;
@@ -17,6 +21,10 @@
     font-size: 30px;
     font-weight: 700;
     line-height: 100%;
+
+    @include onDesktop {
+      font-size: 36px;
+    }
 
     @include hover (color, $color-hover);
   }
