--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,6 +1,10 @@
 .main {
   &__schedule {
     margin-bottom: 40px;
+
+    @include onDesktop {
+      margin-bottom: 87px;
+    }
   }
 
   &__title {
