--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -6,6 +6,10 @@
     width: 700px;
   }
 
+  @include onDesktop {
+    display: none;
+  }
+
   &__images {
     display: flex;
     width: fit-content;
