--- a/src/styles/blocks/social-icons.scss
+++ b/src/styles/blocks/social-icons.scss
@@ -1,6 +1,7 @@
 .social-icons {
   display: flex;
   align-items: center;
+  width: fit-content;
 
   @include onTablet {
     justify-content: space-between;
