--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -7,6 +7,11 @@
     margin-bottom: 50px;
   }
 
+  @include onTablet {
+    padding: 163px 0;
+    margin-bottom: 47px;
+  }
+
   &__content {
     @include onTablet {
       @include grid;
@@ -21,6 +26,7 @@
     @include onTablet {
       margin-bottom: 16px;
       grid-column: 3/-3;
+      text-align: center;
     }
   }
 
@@ -41,5 +47,9 @@
 
   &__form {
     grid-column: 2/-2;
+
+    @include onDesktop {
+      grid-column: 4/-4;
+    }
   }
 }
