--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -5,6 +5,11 @@
 
   @include onTablet {
     width: 270px;
+    grid-template-columns: 1fr 70px;
+  }
+
+  @include onDesktop {
+    justify-self: end;
   }
 
   &__main {
