--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -4,6 +4,10 @@
   padding-block: 10px;
   @include grid;
 
+  @include onDesktop {
+    padding-block: 15px;
+  }
+
   &__menu {
     cursor: pointer;
     display: block;
@@ -19,6 +23,11 @@
     @include onTablet {
       top: 39px;
       left: 35px;
+    }
+
+    @include onDesktop {
+      top: 39px;
+      left: 55px;
     }
 
     &:hover {
