--- a/src/styles/blocks/menu-header.scss
+++ b/src/styles/blocks/menu-header.scss
@@ -27,6 +27,10 @@
       border-bottom: 0;
       border-right: 1px solid rgba(255, 255, 255, 0.5);
     }
+
+    @include onDesktop {
+      grid-column: 1/7;
+    }
   }
 
   &__bottom {
@@ -36,6 +40,10 @@
       column-gap: 38px;
       align-items: start;
       grid-column: -1/-4;
+    }
+
+    @include onDesktop {
+      grid-column: -2/-6;
     }
   }
 
