--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -30,6 +30,10 @@
     @include onTablet {
       margin-bottom: 88px;
     }
+
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
   }
 
 }
