add tblet version

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,16 +1,30 @@
 .events {
   padding-top: 70px;
+  display: flex;
+  justify-content: center;
   text-align: center;
   box-sizing: border-box;
+  padding: 0 20px;
+
+  @include onTablet {
+    padding: 0 34px;
+    justify-content: left;
+  }
 
   &__catalog {
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    // gap: 60px;
     justify-content: center;
     align-items: center;
     text-align: center;
     margin: 70px 0 60px;
+
+    @include onTablet {
+      justify-content: start;
+      align-items: start;
+      text-align: left;
+    }
   }
 
   &__title {
@@ -19,5 +33,11 @@
     font-size: 36px;
     line-height: 36px;
     color: $c-for-text;
+    width: 280px;
+
+    @include onTablet {
+      text-align: left;
+      width: 460px;
+    }
   }
 }
