--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,9 +1,13 @@
 .gallery {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   gap: 40px;
+  padding: 70px 20px;
+
+  @include onTablet {
+    padding: 0 34px;
+    gap: 46px;
+  }
 
   &__title {
     margin-top: 180px;
@@ -13,10 +17,30 @@
     line-height: 36px;
     color: $c-black;
     text-align: center;
+
+    @include onTablet {
+      padding-top: 50px;
+      text-align: left;
+    }
+  }
+
+  &__slider {
+    display: flex;
+    gap: 16px;
+
+    @include onTablet {
+      gap: 20px;
+    }
   }
 
   &__image {
     width: 280px;
+    height: 410px;
+
+    @include onTablet {
+      width: 340px;
+      height: 543px;
+    }
   }
 
   &__slider__items {
