--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -21,6 +21,8 @@
 
   &--close {
     background-image: url(../images/icons/close.svg);
+    width: 13px;
+    height: 13px;
   }
 
   &__footer--logo {
