--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,9 +13,27 @@
 @import "./subscribe.scss";
 @import "./footer.scss";
 
+
+html {
+  scroll-behavior: smooth;
+
+  &:has(.menu:target) {
+    overflow: hidden;
+    .header,
+    .main {
+      background-color: rgba($c-black, $alpha: .3);
+    }
+  }
+
+  // &:not(.header:target) {
+  //   .scroll__top {
+  //     display: none;
+  //   }
+  // }
+}
+
 body {
   background: $background-c-white;
-  scroll-behavior: smooth;
   font-family: 'IBM Ple x Sans', sans-serif;
   margin: 0;
 }
