--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,14 +1,28 @@
 .event {
   display: flex;
   flex-direction: column;
-  // text-align: left;
+  text-align: left;
+  box-sizing: border-box;
   max-width: 280px;
-  padding: 0 20px;
+  height: auto;
 
   &__image {
     width: 280px;
     height: 210px;
     margin-bottom: 16px;
+
+    @include onTablet {
+      width: 699px;
+      height: 520px;
+    }
+  }
+
+  &__conteiner {
+    width: 280px;
+
+    @include onTablet {
+      width: 460px;
+    }
   }
 
   &__subtitle {
@@ -35,7 +49,6 @@
     line-height: 28px;
     color: $c-for-text;
     margin-bottom: 10px;
-    box-sizing: border-box;
 
     // &::after {
     //   content: "";
@@ -53,5 +66,6 @@
     font-size: 16px;
     line-height: 24px;
     color: #4e4e4e;
+    margin-bottom: 60px;
   }
 }
