--- a/src/styles/scroll-top.scss
+++ b/src/styles/scroll-top.scss
@@ -4,6 +4,7 @@
   width: 50px;
   border-radius: 50%;
   border: 1px solid $background-c-green;
+  background-color: transparent;
 
   background-image: url(../images/icons/arrow-up.svg);
   background-repeat: no-repeat;
@@ -12,9 +13,11 @@
   transition: 0.3 ease-in-out transform;
 
   position: fixed;
+  // top: 120vh;
   right: 20px;
   bottom: 20px;
-  z-index: 1;
+  z-index: 99;
+  cursor: pointer;
 
   &:hover {
     transform: scale(1);
