--- a/src/styles/subscribe.scss
+++ b/src/styles/subscribe.scss
@@ -3,6 +3,11 @@
   background-size: contain;
   padding: 0 20px;
 
+  @include onTablet {
+    background-image: url(..//images/mobile-muzej-4.png);
+    background-size: contain;
+  }
+
   &__conteiner {
     height: 386px;
     display: flex;
@@ -18,6 +23,12 @@
     line-height: 36px;
     color: $background-c-white;
     margin-bottom: 20px;
+
+    @include onTablet {
+      font-size: 48px;
+      line-height: 48px;
+      margin-bottom: 18px;
+    }
   }
 
   &__description {
@@ -28,6 +39,11 @@
     line-height: 27px;
     color: $background-c-white;
     margin-bottom: 50px;
+
+    @include onTablet {
+      line-height: 18px;
+      margin-bottom: 64px;
+    }
   }
 
   &__input__conteiner {
@@ -40,7 +56,9 @@
     box-sizing: border-box;
     color: $c-for-text;
     width: 230px;
-    padding: 16px 0 17px 24px;
+    padding-left: 16px;
+    width: 230px;
+    height: 50px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 14px;
@@ -52,11 +70,21 @@
       font-family: inherit;
       color: $c-grey;
     }
+
+    @include onTablet {
+      width: 374px;
+      height: 70px;
+    }
   }
 
     &__image {
       display: block;
       background-color: $c-orange;
       padding: 19px 21px;
+
+      @include onTablet {
+        padding: 29px 31px;
+        margin-left: 16px;
+      }
     }
   }
