--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,11 +1,34 @@
 .footer {
   padding: 0 20px;
 
+  @include onTablet {
+    display: flex;
+    flex-wrap: wrap;
+
+    &__schedule,
+    &__contacts {
+      width: 220px;
+      padding-left: 55px;
+    }
+
+    &__navigation {
+      width: 440px;
+      justify-content: center;
+      align-items: center;
+      padding-left: 125px;
+    }
+  }
+
   &__icons {
     margin-top: 50px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    @include onTablet {
+      flex-direction: column;
+      justify-content: start;
+    }
   }
 
   &__media {
@@ -16,6 +39,10 @@
     & :not(:last-child) {
       margin-right: 20px;
     }
+
+    @include onTablet {
+      margin-top: 62px;
+    }
   }
 
   &__conteiner {
@@ -23,6 +50,10 @@
     display: flex;
     gap: 20px;
     border-bottom: 1px solid $background-c-green;
+
+    @include onTablet {
+      gap: 0;
+    }
   }
 
   &__title {
