ad animation for images

--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -6,15 +6,15 @@
       margin-bottom: 64px;
     }
 
-    @include onTablet {
+    @include onDesktop {
       margin-bottom: 104px;
     }
 
     &:last-child {
-      margin-bottom: 46px;
+      margin-bottom: 26px;
 
       @include onTablet {
-        margin-bottom: 0;
+        margin-bottom: 14px;
       }
 
       @include onDesktop {
@@ -29,8 +29,9 @@
     }
   }
 
-  &__img {
-    width: 100%;
+  &__img-wr {
+    height: fit-content;
+    overflow: hidden;
     margin-bottom: 20px;
 
     @include onTablet {
@@ -38,9 +39,15 @@
     }
 
     @include onDesktop {
-      grid-column: 1/8;
       margin-bottom: 0;
+      grid-column: 1/8;
     }
+  }
+
+  &__img {
+    width: 100%;
+
+    @include hover(transform, scale(1.1));
 
     &--3 {
       height: 210px;
@@ -51,7 +58,7 @@
         height: 390px;
       }
 
-      @include onTablet {
+      @include onDesktop {
         height: 550px;
       }
     }
