--- a/src/styles/blocks/btn.scss
+++ b/src/styles/blocks/btn.scss
@@ -5,6 +5,10 @@
 
   &__tickets {
     background-color: $color-secondary;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
   }
 
   &__form {
