--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -21,6 +21,7 @@
   &__img-wr {
     width: 280px;
     height: 410px;
+    overflow: hidden;
 
     @include onTablet {
       width: 340px;
@@ -32,6 +33,8 @@
     display: block;
     object-fit: cover;
     object-position: center;
+    @include hover(transform, scale(1.2));
+
 
     @include onTablet {
       height: 100%;
