--- a/src/styles/blocks/social-icons.scss
+++ b/src/styles/blocks/social-icons.scss
@@ -11,11 +11,19 @@
     padding: 10px;
     cursor: pointer;
 
+    &:last-child {
+      padding-right: 0;
+    }
+
     @include hover(transform, scale(1.2));
 
     @include onTablet {
       &:first-child {
         padding-left: 0;
+      }
+
+      &:last-child {
+        padding-right: 10px;
       }
     }
   }
