--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -7,7 +7,7 @@
     margin-bottom: 50px;
   }
 
-  @include onTablet {
+  @include onDesktop {
     padding: 163px 0;
     margin-bottom: 47px;
   }
