--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -31,6 +31,15 @@
   }
 
   &__arrow {
+    width: 20px;
+
+    @include onTablet {
+      width: 30px
+    }
+
+    @include onDesktop {
+      width: 40px;
+    }
     @include hover(transform, scale(1.2));
   }
 }
