--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -82,3 +82,19 @@
     @content;
   }
 }
+
+@mixin arrowUpAnim {
+  &:hover {
+    animation: moveup $transition-duration ease-in-out infinite alternate;
+  }
+
+  @keyframes moveup {
+    from {
+      transform: translateY(0);
+    }
+
+    to {
+      transform: translateY(-10px);
+    }
+  }
+}
