--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -4,10 +4,9 @@
   line-height: 100%;
   overflow: hidden;
 
-  grid-column: -2/-6;
-
   @include onTablet {
     border-top: 1px solid $color-secondary;
+    grid-column: -2/-6;
   }
 
   @include onDesktop {
@@ -15,7 +14,7 @@
   }
 
   &__content {
-    margin-bottom: 80px;
+    @include grid;
 
     &--header {
       transform: translateX(52px);
@@ -26,16 +25,12 @@
       }
     }
 
-    @include onTablet {
-      display: flex;
-      gap: 29%;
-      justify-content: center;
-    }
-
     @include onDesktop {
-      margin-bottom: 0;
+      position: absolute;
+      top: 0;
+      right: 200px;
       display: flex;
-      gap: 86px;
+      gap: 100px;
     }
   }
 
