--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -186,11 +186,12 @@
 
   &__bottom {
     position: relative;
-    bottom: 74px;
+    bottom: 0;
     background-color: #fff;
     margin: 0 auto;
-
     border-bottom: 2px solid rgba(26, 90, 76, 0.25);
+
+    transition: bottom ease-in-out $transition-duration;
 
     @include onTablet {
       padding: 45px 55px 50px;
